# htelem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
docs/html/: annotated.html  annotated_dup.js  attribute__list_8h_source.html  braid_8h_source.html  braided__renderer_8h_source.html  classes.html  classht_1_1attribute-members.html  classht_1_1attribute.html  classht_1_1detail_1_1tuple__view__helper-members.html  classht_1_1detail_1_1tuple__view__helper.html  classht_1_1tuple__range.html  classht_1_1tuple__range_3_01UT_00_01std_1_1index__sequence_3_01I_8_8_8_01_4_01_4-members.html  classht_1_1tuple__range_3_01UT_00_01std_1_1index__sequence_3_01I_8_8_8_01_4_01_4.html  classht_1_1window-members.html  classht_1_1window.html  conceptht_1_1element__type.html  conceptht_1_1event__named.html  conceptht_1_1named__event.html  conceptht_1_1sv__braid.html  concepts.html  concepts.js  dir_494ed7a8e19d515407ad7bd3a10ba335.html  dir_494ed7a8e19d515407ad7bd3a10ba335.js  dir_494ed7a8e19d515407ad7bd3a10ba335_dep.map  dir_494ed7a8e19d515407ad7bd3a10ba335_dep.md5  dir_59e8a91199bc05e95ebbb4fb6308107c.html  dir_59e8a91199bc05e95ebbb4fb6308107c.js  dir_59e8a91199bc05e95ebbb4fb6308107c_dep.map  dir_59e8a91199bc05e95ebbb4fb6308107c_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  element_8h_source.html  event_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  group__aspect-initialization.html  group__aspect-initialization.js  (+310 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_16.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_c.js  (+37 more)
include/htelem/: attribute_list.h  braid.h  braided_renderer.h  dynamically_many.h  element.h  event.h  html.h  html_event.h  input.h  interface_spec.h  interfaces.h  render_common.h  repeatable.h  static_string.h  style.h  util.h  window.h
include/htelem/_utilities/: pack_index.h  static_string.h  tuple_range.h  type_traits.h
lib/: attribute_list.h  braid.h  braided_renderer.h  element.h  html.h  interface_spec.h  render_common.h  static_string.h  util.h
test/: CMakeLists.txt  braid_tests.cpp  braided_renderer_tests.cpp  dynamically_many_tests.cpp  event_tests.cpp  simple_element_tests.cpp  simple_elements.h  string_tests.cpp  test_runner.cpp  testing.h  type_util_tests.cpp
tools/: htelem-page-dump.sh  htelem-page-list.sh
tools/htelem-autogen/: index.ts  package.json  tsconfig.json
